# The-Dot-Game

./: .gitignore  CMakeLists.txt  README.md  beam.cpp  beam.h  creditspage.cpp  creditspage.h  dotfield.cpp  dotfield.h  dotfield_display.cpp  dotfield_essencials.cpp  effects.cpp  effects.h  levelmap.cpp  levelmap.h  levelselect.cpp  levelselect.h  main.cpp  mainwindow.cpp  mainwindow.h  map.cpp  map.h  map1.cpp  map1.h  map_maker.cpp  music.cpp  music.h  overlay.cpp  overlay.h  resources.qrc  savegame.cpp  savegame.h  settings.h  settingspage.cpp  settingspage.h  status.h  tittlepage.cpp  tittlepage.h  tutorialpage.cpp  tutorialpage.h
maps/: Map_Maker_Guide.txt  map1_1.h  map1_2.h  map1_3.h  map1_4.h  map1_5.h  map2_1.h  map2_2.h  map2_3.h  map2_4.h  map2_5.h  map3_1.h  map3_2.h  map3_3.h  map3_4.h  map3_5.h  map4_1.h  map4_2.h  map4_3.h  map4_4.h  map4_5.h  map5_1.h  map5_2.h  map5_3.h  map5_4.h  map5_5.h  map6_1.h  mapsorter.h
resources/icons/: DotGameIcon.icns  Info.plist
